memory allocation as reported in the issue. NOTE: due to this change, the PathChildrenCache node
refresh code and the PathChildrenCacheListener notification threads have been merged. Do not block
for very long inside of your PathChildrenCacheListener or you will prevent the cache from getting
updated.

1.2.4 - November 2, 2012
========================
* Depend on ZooKeeper 3.4.4

* Added a new Examples sub project - better late than never.

* Guaranteed deletes were not working correctly if CuratorFramework.usingNamespace() was used.

* I can't believe this has been like this for so long. The executor passed to listeners was never used.
Doh!!! Major bug.

* Issue 188: Display a meaningful message if the value node is corrupted

* Issue 194: Initial sync() operation should occur immediately - like the change in 1.2.3 for all "background"
operations.

* Added support for ZK 3.4's read only operation as described here:
http://wiki.apache.org/hadoop/ZooKeeper/GSoCReadOnlyMode - CuratorFrameworkFactory.Builder has a new
method to set canBeReadOnly(). There is a new ConnectionState: READ_ONLY. Note: Your servers need to
see a system property set "readonlymode.enabled" as true. This isn't documented anywhere that I can see.

* Pull Request: 196 - Fix some issues with NamespaceFacade stemming from inconsistent state. Thanks to
Answashe.

* Issue 197 - Possible NullPointerException from ConnectionStateManager line 133 that is caused by a race
condition. In CuratorFrameworkImpl, connectionStateManager.start() is called after client.start().

1.2.3 - October 6, 2012
=======================
* Previously, all background operations (i.e. when the inBackground() method is used)
were put into a queue and processed in an internal thread. Curator does this to handle retries in
background operations. This can be improved, however. The first time the background operation is
executed the ZooKeeper method can be called directly - without queuing. This will get the operation